--- a/componentes/neveras.html
+++ b/componentes/neveras.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Servicio Técnico Especializado en Cali</title>
+    <link rel="icon" type="image/jpeg" href="../favicon.jpg">
+
     <link rel="stylesheet" href="neveras.css" />
   </head>
   <body>
@@ -26,16 +28,16 @@
       <nav class="desktop-nav">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="/componentes/neveras.html">Neveras</a></li>
-          <li><a href="/componentes/lavadoras.html">Lavadoras</a></li>
-          <li><a href="/componentes/secadora.html">Secadoras</a></li>
+          <li><a href="neveras.html">Neveras</a></li>
+          <li><a href="lavadoras.html">Lavadoras</a></li>
+          <li><a href="secadora.html">Secadoras</a></li>
           <li>
-            <a href="/componentes/airCondicionado.html">Aires Acondicionados</a>
+            <a href="airCondicionado.html">Aires Acondicionados</a>
           </li>
-          <li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
-          <li><a href="/componentes/cobertura.html">Cobertura</a></li>
-          <li><a href="/componentes/blog.html">Blog</a></li>
-          <li><a href="/componentes/contacto.html">Contacto</a></li>
+          <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+          <li><a href="cobertura.html">Cobertura</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -45,16 +47,16 @@
     <nav class="mobile-nav">
       <ul>
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="/componentes/neveras.html">Neveras</a></li>
-        <li><a href="/componentes/lavadoras.html">Lavadoras</a></li>
-        <li><a href="/componentes/secadora.html">Secadoras</a></li>
+        <li><a href="neveras.html">Neveras</a></li>
+        <li><a href="lavadoras.html">Lavadoras</a></li>
+        <li><a href="secadora.html">Secadoras</a></li>
         <li>
-          <a href="/componentes/airCondicionado.html">Aires Acondicionados</a>
+          <a href="airCondicionado.html">Aires Acondicionados</a>
         </li>
-        <li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
-        <li><a href="/componentes/cobertura.html">Cobertura</a></li>
-        <li><a href="/componentes/blog.html">Blog</a></li>
-        <li><a href="/componentes/contacto.html">Contacto</a></li>
+        <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+        <li><a href="cobertura.html">Cobertura</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
 
@@ -116,7 +118,7 @@
 
         <div class="problems-image-wrapper">
           <img
-            src="/img/neverasss.jpg"
+            src="../img/neverasss.jpg"
             alt="Neveras LG modernas en exhibición"
             class="problems-image"
           />
@@ -226,7 +228,7 @@
           <!-- Imagen grande izquierda -->
           <div class="imagen-grande">
             <img
-              src="/img/reparacion1.jpg"
+              src="../img/reparacion1.jpg"
               alt="Cocina moderna blanca con nevera LG"
             />
           </div>
@@ -235,25 +237,25 @@
           <div class="galeria-pequena">
             <div class="item-pequeno">
               <img
-                src="/img/reparacion-neveras-2.jpg"
+                src="../img/reparacion-neveras-2.jpg"
                 alt="Técnico explicando a pareja"
               />
             </div>
             <div class="item-pequeno">
               <img
-                src="/img/reparacion-nevera-3.jpeg"
+                src="../img/reparacion-nevera-3.jpeg"
                 alt="Técnico hablando con clienta"
               />
             </div>
             <div class="item-pequeno">
               <img
-                src="/img/reparacion-nevera-4.jpeg"
+                src="../img/reparacion-nevera-4.jpeg"
                 alt="Técnico reparando electrodoméstico"
               />
             </div>
             <div class="item-pequeno">
               <img
-                src="/img/reparacion-nevera-5.jpg"
+                src="../img/reparacion-nevera-5.jpg"
                 alt="Técnico abriendo nevera"
               />
             </div>
@@ -394,19 +396,19 @@
             <h4>Servicios</h4>
             <ul>
               <li>
-                <a href="/componentes/neveras.html">Reparación de Neveras</a>
+                <a href="neveras.html">Reparación de Neveras</a>
               </li>
               <li>
-                <a href="/componentes/lavadoras.html"
+                <a href="lavadoras.html"
                   >Reparación de Lavadoras</a
                 >
               </li>
               <li><a href="#">Reparación de Estufas</a></li>
               <li>
-                <a href="/componentes/secadora.html">Reparación de Secadoras</a>
+                <a href="secadora.html">Reparación de Secadoras</a>
               </li>
               <li>
-                <a href="/componentes/airCondicionado.html"
+                <a href="airCondicionado.html"
                   >Reparación de Aires Acondicionados</a
                 >
               </li>
@@ -417,11 +419,11 @@
             <h4>Empresa</h4>
             <ul>
               <li>
-                <a href="/componentes/sobreNosotros.html">Sobre Nosotros</a>
+                <a href="sobreNosotros.html">Sobre Nosotros</a>
               </li>
               <li><a href="#">Cobertura</a></li>
-              <li><a href="/componentes/blog.html">Blog</a></li>
-              <li><a href="/componentes/contacto.html">Contacto</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
             </ul>
           </div>
 
