--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicio Técnico Especializado  en Cali</title>
+    <link rel="icon" type="image/jpeg" href="favicon_st.png">
+
     <link rel="stylesheet" href="inicio.css">
 </head>
 <body>
@@ -25,14 +27,14 @@
         <nav class="desktop-nav">
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="/componentes/neveras.html">Neveras</a></li>
-                <li><a href="/componentes/lavadoras.html">Lavadoras</a></li>
-                <li><a href="/componentes/secadora.html">Secadoras</a></li>
-                <li><a href="/componentes/airCondicionado.html">Aires Acondicionados</a></li>
-                <li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
-                <li><a href="/componentes/cobertura.html">Cobertura</a></li>
-                <li><a href="/componentes/blog.html">Blog</a></li>
-                <li><a href="/componentes/contacto.html">Contacto</a></li>
+                <li><a href="componentes/neveras.html">Neveras</a></li>
+                <li><a href="componentes/lavadoras.html">Lavadoras</a></li>
+                <li><a href="componentes/secadora.html">Secadoras</a></li>
+                <li><a href="componentes/airCondicionado.html">Aires Acondicionados</a></li>
+                <li><a href="componentes/sobreNosotros.html">Sobre Nosotros</a></li>
+                <li><a href="componentes/cobertura.html">Cobertura</a></li>
+                <li><a href="componentes/blog.html">Blog</a></li>
+                <li><a href="componentes/contacto.html">Contacto</a></li>
             </ul>
         </nav>
 
@@ -43,14 +45,14 @@
             <label for="menu-toggle" class="close">×</label>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="/componentes/neveras.html">Neveras</a></li>
-                <li><a href="/componentes/lavadoras.html">Lavadoras</a></li>
-                <li><a href="/componentes/secadora.html">Secadoras</a></li>
-                <li><a href="/componentes/airCondicionado.html">Aires Acondicionados</a></li>
-                <li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
-                <li><a href="/componentes/cobertura.html">Cobertura</a></li>
-                <li><a href="/componentes/blog.html">Blog</a></li>
-                <li><a href="/componentes/contacto.html">Contacto</a></li>
+                <li><a href="componentes/neveras.html">Neveras</a></li>
+                <li><a href="componentes/lavadoras.html">Lavadoras</a></li>
+                <li><a href="componentes/secadora.html">Secadoras</a></li>
+                <li><a href="componentes/airCondicionado.html">Aires Acondicionados</a></li>
+                <li><a href="componentes/sobreNosotros.html">Sobre Nosotros</a></li>
+                <li><a href="componentes/cobertura.html">Cobertura</a></li>
+                <li><a href="componentes/blog.html">Blog</a></li>
+                <li><a href="componentes/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -225,21 +227,21 @@
       <div class="footer-col">
         <h4>Servicios</h4>
         <ul>
-          <li><a href="/componentes/neveras.html">Reparación de Neveras</a></li>
-          <li><a href="/componentes/lavadoras.html">Reparación de Lavadoras</a></li>
+          <li><a href="componentes/neveras.html">Reparación de Neveras</a></li>
+          <li><a href="componentes/lavadoras.html">Reparación de Lavadoras</a></li>
           <li><a href="#">Reparación de Estufas</a></li>
-          <li><a href="/componentes/secadora.html">Reparación de Secadoras</a></li>
-          <li><a href="/componentes/airCondicionado.html">Reparación de Aires Acondicionados</a></li>
+          <li><a href="componentes/secadora.html">Reparación de Secadoras</a></li>
+          <li><a href="componentes/airCondicionado.html">Reparación de Aires Acondicionados</a></li>
         </ul>
       </div>
 
       <div class="footer-col">
         <h4>Empresa</h4>
         <ul>
-          <li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
+          <li><a href="componentes/sobreNosotros.html">Sobre Nosotros</a></li>
           <li><a href="#">Cobertura</a></li>
-          <li><a href="/componentes/blog.html">Blog</a></li>
-          <li><a href="/componentes/contacto.html">Contacto</a></li>
+          <li><a href="componentes/blog.html">Blog</a></li>
+          <li><a href="componentes/contacto.html">Contacto</a></li>
         </ul>
       </div>
 
