--- a/componentes/blog.html
+++ b/componentes/blog.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Servicio Técnico Especializado en Cali</title>
+    <link rel="icon" type="image/jpeg" href="../favicon.jpg">
+
 <link rel="stylesheet" href="blog.css">
 </head>
 <body>
@@ -24,27 +26,27 @@
 <nav class="desktop-nav">
 <ul>
 <li><a href="../index.html">Inicio</a></li>
-<li><a href="/componentes/neveras.html">Neveras</a></li>
-<li><a href="/componentes/lavadoras.html">Lavadoras</a></li>
-<li><a href="/componentes/secadora.html">Secadoras</a></li>
-<li><a href="/componentes/airCondicionado.html">Aires Acondicionados</a></li>
-<li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
-<li><a href="/componentes/cobertura.html">Cobertura</a></li>
+<li><a href="neveras.html">Neveras</a></li>
+<li><a href="lavadoras.html">Lavadoras</a></li>
+<li><a href="secadora.html">Secadoras</a></li>
+<li><a href="airCondicionado.html">Aires Acondicionados</a></li>
+<li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+<li><a href="cobertura.html">Cobertura</a></li>
 <li><a href="#">Blog</a></li>
-<li><a href="/componentes/contacto.html">Contacto</a></li>
+<li><a href="contacto.html">Contacto</a></li>
 </ul>
 </nav>
 <nav class="mobile-nav">
 <ul>
-<li><a href="/componentes/inicio.html">Inicio</a></li>
-<li><a href="/componentes/neveras.html">Neveras</a></li>
-<li><a href="/componentes/lavadoras.html">Lavadoras</a></li>
-<li><a href="/componentes/secadora.html">Secadoras</a></li>
-<li><a href="/componentes/airCondicionado.html">Aires Acondicionados</a></li>
-<li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
-<li><a href="/componentes/cobertura.html">Cobertura</a></li>
+<li><a href="../index.html">Inicio</a></li>
+<li><a href="neveras.html">Neveras</a></li>
+<li><a href="lavadoras.html">Lavadoras</a></li>
+<li><a href="secadora.html">Secadoras</a></li>
+<li><a href="airCondicionado.html">Aires Acondicionados</a></li>
+<li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+<li><a href="cobertura.html">Cobertura</a></li>
 <li><a href="#">Blog</a></li>
-<li><a href="/componentes/contacto.html">Contacto</a></li>
+<li><a href="contacto.html">Contacto</a></li>
 </ul>
 </nav>
 </header>
@@ -115,7 +117,7 @@
     <section class="help">
         <h2>¿Necesitas Ayuda Profesional?</h2>
         <p>Si tu electrodoméstico presenta problemas, no dudes en contactarnos. Nuestros técnicos están listos para ayudarte.</p>
-        <button ><a href="/componentes/contacto.html" id="boton">Solicitar Servicio</a></button> <!-- Placeholder URL -->
+        <button ><a href="contacto.html" id="boton">Solicitar Servicio</a></button> <!-- Placeholder URL -->
         <a href="tel:+573151144835" class="btn-call">
   Llamar ahora
 </a>
@@ -139,19 +141,19 @@
 <h4>Servicios</h4>
 <ul> 
     <li>
-                <a href="/componentes/neveras.html">Reparación de Neveras</a>
+                <a href="neveras.html">Reparación de Neveras</a>
               </li>
               <li>
-                <a href="/componentes/lavadoras.html"
+                <a href="lavadoras.html"
                   >Reparación de Lavadoras</a
                 >
               </li>
               <li><a href="#">Reparación de Estufas</a></li>
               <li>
-                <a href="/componentes/secadora.html">Reparación de Secadoras</a>
+                <a href="secadora.html">Reparación de Secadoras</a>
               </li>
               <li>
-                <a href="/componentes/airCondicionado.html"
+                <a href="airCondicionado.html"
                   >Reparación de Aires Acondicionados</a
                 >
               </li>
@@ -161,11 +163,11 @@
 <h4>Empresa</h4>
 <ul>
     <li>
-                <a href="/componentes/sobreNosotros.html">Sobre Nosotros</a>
+                <a href="sobreNosotros.html">Sobre Nosotros</a>
               </li>
               <li><a href="#">Cobertura</a></li>
-              <li><a href="/componentes/blog.html">Blog</a></li>
-              <li><a href="/componentes/contacto.html">Contacto</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
 </ul>
 </div>
 <div class="footer-col footer-contact">
