--- a/componentes/secadora.html
+++ b/componentes/secadora.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Servicio Técnico Especializado en Cali</title>
+    <link rel="icon" type="image/jpeg" href="../favicon.jpg">
+
 <link rel="stylesheet" href="secadora.css">
 </head>
 <body>
@@ -24,27 +26,27 @@
 <nav class="desktop-nav">
 <ul>
 <li><a href="../index.html">Inicio</a></li>
-<li><a href="/componentes/neveras.html">Neveras</a></li>
-<li><a href="/componentes/lavadoras.html">Lavadoras</a></li>
-<li><a href="/componentes/secadora.html">Secadoras</a></li>
-<li><a href="/componentes/airCondicionado.html">Aires Acondicionados</a></li>
-<li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
-<li><a href="/componentes/cobertura.html">Cobertura</a></li>
-<li><a href="/componentes/blog.html">Blog</a></li>
-<li><a href="/componentes/contacto.html">Contacto</a></li>
+<li><a href="neveras.html">Neveras</a></li>
+<li><a href="lavadoras.html">Lavadoras</a></li>
+<li><a href="secadora.html">Secadoras</a></li>
+<li><a href="airCondicionado.html">Aires Acondicionados</a></li>
+<li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+<li><a href="cobertura.html">Cobertura</a></li>
+<li><a href="blog.html">Blog</a></li>
+<li><a href="contacto.html">Contacto</a></li>
 </ul>
 </nav>
 <nav class="mobile-nav">
 <ul>
 <li><a href="../index.html">Inicio</a></li>
-<li><a href="/componentes/neveras.html">Neveras</a></li>
-<li><a href="/componentes/lavadoras.html">Lavadoras</a></li>
-<li><a href="/componentes/secadora.html">Secadoras</a></li>
-<li><a href="/componentes/airCondicionado.html">Aires Acondicionados</a></li>
-<li><a href="/componentes/sobreNosotros.html">Sobre Nosotros</a></li>
-<li><a href="/componentes/cobertura.html">Cobertura</a></li>
-<li><a href="/componentes/blog.html">Blog</a></li>
-<li><a href="/componentes/contacto.html">Contacto</a></li>
+<li><a href="neveras.html">Neveras</a></li>
+<li><a href="lavadoras.html">Lavadoras</a></li>
+<li><a href="secadora.html">Secadoras</a></li>
+<li><a href="airCondicionado.html">Aires Acondicionados</a></li>
+<li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+<li><a href="cobertura.html">Cobertura</a></li>
+<li><a href="blog.html">Blog</a></li>
+<li><a href="contacto.html">Contacto</a></li>
 </ul>
 </nav>
 </header>
@@ -78,7 +80,7 @@
 <div class="problem-item"><span class="icon">!</span> Error en display</div>
 </div>
 <div class="problems-image-wrapper">
-<img src="/img/secadora.png" class="problems-image">
+<img src="../img/secadora.png" class="problems-image">
 </div>
 </div>
 </section>
@@ -199,19 +201,19 @@
 <h4>Servicios</h4>
 <ul> 
     <li>
-                <a href="/componentes/neveras.html">Reparación de Neveras</a>
+                <a href="neveras.html">Reparación de Neveras</a>
               </li>
               <li>
-                <a href="/componentes/lavadoras.html"
+                <a href="lavadoras.html"
                   >Reparación de Lavadoras</a
                 >
               </li>
               <li><a href="#">Reparación de Estufas</a></li>
               <li>
-                <a href="/componentes/secadora.html">Reparación de Secadoras</a>
+                <a href="secadora.html">Reparación de Secadoras</a>
               </li>
               <li>
-                <a href="/componentes/airCondicionado.html"
+                <a href="airCondicionado.html"
                   >Reparación de Aires Acondicionados</a
                 >
               </li>
@@ -221,11 +223,11 @@
 <h4>Empresa</h4>
 <ul>
     <li>
-                <a href="/componentes/sobreNosotros.html">Sobre Nosotros</a>
+                <a href="sobreNosotros.html">Sobre Nosotros</a>
               </li>
               <li><a href="#">Cobertura</a></li>
-              <li><a href="/componentes/blog.html">Blog</a></li>
-              <li><a href="/componentes/contacto.html">Contacto</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
 </ul>
 </div>
 <div class="footer-col footer-contact">
