--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicio Técnico Especializado  en Cali</title>
-    <link rel="icon" type="image/jpeg" href="favicon_st.png">
+    <link rel="icon" type="image/png" href="favicon_st.png">
 
     <link rel="stylesheet" href="inicio.css">
 </head>
